cria side-post, cria gitignore, modifica estilo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                     Postagens Recentes
                 </h3>
                 <div class="side-post">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <P>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                        <a href="#">Leia mais</a>
+                    </P>
                 </div>
             </div>
 
