modifica posts recentes, cria categorias

--- a/index.html
+++ b/index.html
@@ -79,7 +79,22 @@
                         <a href="#">Leia mais</a>
                     </P>
                 </div>
+                <div class="side-post">
+                    <P>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                        <a href="#">Leia mais</a>
+                    </P>
+                </div>
             </div>
+            <div class="side-content">
+                <h3>
+                    Categorias
+                </h3>
+                <a href="jogos.html">Jogos</a><br>
+                <a href="celulares.html">Celulares</a><br>
+                <a href="informatica.html">Informatica</a><br>
+                <a href="Eletronico.html">Eletronicos</a><br>
+                <a href="jogos.html">Jogos</a>
 
         </div>
     </div>
