modifica area-menu removendo os links inexistentes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             </div>
             <div id="area-menu">
                 <a href="index.html#">Home</a>
-                <a href="jogos.html">Jogos</a>
-                <a href="celulares.html">Celulares</a>
-                <a href="informatica.html">Informatica</a>
-                <a href="Eletronico.html">Eletronicos</a>
+                <a href="#">Jogos</a>
+                <a href="#">Celulares</a>
+                <a href="#">Informatica</a>
+                <a href="#">Eletronicos</a>
 
             </div>
         </div>
@@ -90,11 +90,11 @@
                 <h3>
                     Categorias
                 </h3>
-                <a href="jogos.html">Jogos</a><br>
-                <a href="celulares.html">Celulares</a><br>
-                <a href="informatica.html">Informatica</a><br>
-                <a href="Eletronico.html">Eletronicos</a><br>
-                <a href="jogos.html">Jogos</a>
+                <a href="#">Jogos</a><br>
+                <a href="#">Celulares</a><br>
+                <a href="#">Informatica</a><br>
+                <a href="#">Eletronicos</a><br>
+                <a href="#">Jogos</a>
 
         </div>
     </div>
