Criação da pagina Services e definição de estilo

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             </div>
             <div id="area-menu">
                 <a href="index.html">Home</a>
-                <a href="Jogos.html">Jogos</a>
-                <a href="#">Celulares</a>
-                <a href="#">Informatica</a>
-                <a href="#">Eletronicos</a>
+                <a href="Jogos.html">Sobre</a>
+                <a href="Services.html">Serviços</a>
+                <a href="#">Portfólio</a>
+                <!-- <a href="#">Eletronicos</a> -->
                 <a href="fale-conosco.html">Fale Conosco</a>
             </div>
         </div>
