--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -17,10 +17,10 @@
         </div>
         <nav id="area-menu">
             <a href="index.html">Home</a>
-            <a href="Jogos.html">Jogos</a>
-            <a href="#">Celulares</a>
-            <a href="#">Informática</a>
-            <a href="#">Eletrônicos</a>
+            <a href="Jogos.html">Sobre</a>
+            <a href="Services.html">Serviços</a>
+            <a href="#">Portfólio</a>
+            <!-- <a href="#">Eletronicos</a> -->
             <a href="fale-conosco.html">Fale Conosco</a>
         </nav>
     </header>
