Remoção da pagina jogos e susbstituição pela sobre, modificação da Navbar

--- a/Sobre.html
+++ b/Sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TecBlog - o Seu Blog de Técnologia</title>
+    <title>CG TECH - Sobre</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
@@ -14,15 +14,14 @@
                     CG<span class="branco">TECH</span>
                 </h1>
             </div>
-            <div id="area-menu">
+            <nav id="area-menu">
                 <a href="index.html">Home</a>
-                <a href="Jogos.html">Jogos</a>
-                <a href="#">Celulares</a>
-                <a href="#">Informatica</a>
-                <a href="#">Eletronicos</a>
+                <a href="Sobre.html">Sobre</a>
+                <a href="Services.html">Serviços</a>
+                <a href="#">Portfólio</a>
+                <!-- <a href="#">Eletronicos</a> -->
                 <a href="fale-conosco.html">Fale Conosco</a>
-            </div>
-        </div>
+            </nav>
     </header>
     
     <div id="content">
