--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fale Conosco - CG TECH</title>
+    <title>CG TECH - Fale Conosco</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         </div>
         <nav id="area-menu">
             <a href="index.html">Home</a>
-            <a href="Jogos.html">Sobre</a>
+            <a href="Sobre.html">Sobre</a>
             <a href="Services.html">Serviços</a>
             <a href="#">Portfólio</a>
             <!-- <a href="#">Eletronicos</a> -->
