--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
                     CG<span class="branco">TECH</span>
                 </h1>
             </div>
-            <div id="area-menu">
+            <nav id="area-menu">
                 <a href="index.html">Home</a>
                 <a href="Jogos.html">Sobre</a>
                 <a href="Services.html">Serviços</a>
                 <a href="#">Portfólio</a>
                 <!-- <a href="#">Eletronicos</a> -->
                 <a href="fale-conosco.html">Fale Conosco</a>
-            </div>
-        </div>
+            </nav>
     </header>
     
     <div id="content">
