edição total, estilo e criação de portifolio.

--- a/Services.html
+++ b/Services.html
@@ -52,6 +52,13 @@
                         <a href="#">Saiba Mais</a>
                     </p>
                 </div>
+
+                <div class="servico">
+                    <h3>🌐 Desenvolvimento Web e Sistemas</h3>
+                    <p>Sites, blogs, cadastros e aplicações com tecnologias modernas como Python, Django, HTML, CSS, JS e PostgreSQL.
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </div>
     
                 <div class="servico">
                     <h3>📊 Análise e Visualização de Dados</h3>
