--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CG TECH - Fale Conosco</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/fale-conosco.css"> <!-- Link para o novo CSS -->
+    <link rel="stylesheet" type="text/css" href="css/estilo.css"> <!-- Link para o novo CSS -->
 </head>
 <body>
     <header>
@@ -20,7 +21,6 @@
             <a href="Sobre.html">Sobre</a>
             <a href="Services.html">Serviços</a>
             <a href="#">Portfólio</a>
-            <!-- <a href="#">Eletronicos</a> -->
             <a href="fale-conosco.html">Fale Conosco</a>
         </nav>
     </header>
@@ -59,7 +59,7 @@
             <strong>Todos os Direitos Reservados © CG TECH CONSULTORIA</strong>
         </div>
     </footer>
-    <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/fale-conosco.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>    
 </body>
 </html>
