--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <nav id="area-menu">
                 <a href="index.html">Home</a>
-                <a href="Jogos.html">Sobre</a>
+                <a href="sobre.html">Sobre</a>
                 <a href="Services.html">Serviços</a>
-                <a href="#">Portfólio</a>
+                <a href="Portifolio.html">Portfólio</a>
                 <!-- <a href="#">Eletronicos</a> -->
                 <a href="fale-conosco.html">Fale Conosco</a>
             </nav>
