Atualização da home, footer e estilos.

--- a/Portifolio.html
+++ b/Portifolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CG TECH</title>
+    <title>CG TECH - Portfólio</title>
     <link rel="stylesheet" type="text/css" href="css/portifolio.css">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="sobre.html">Sobre</a>
                 <a href="Services.html">Serviços</a>
-                <a href="#">Portfólio</a>
+                <a href="Portifolio.html">Portfólio</a>
                 <!-- <a href="#">Eletronicos</a> -->
                 <a href="fale-conosco.html">Fale Conosco</a>
             </nav>
@@ -45,11 +45,7 @@
     </div>
     
     <footer>
-        <div id="footer">
-           <strong>
-            Todos os Direitos Reservados © CG TECH CONSULTORIA
-           </strong> 
-        </div>
-    </footer>    
+        <p>&copy; 2025 CGTECH Consultoria. Todos os direitos reservados.</p>
+    </footer> 
 </body>
 </html>
