--- a/Services.html
+++ b/Services.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="Sobre.html">Sobre</a>
                 <a href="Services.html">Serviços</a>
-                <a href="#">Portfólio</a>
+                <a href="Portifolio.html">Portfólio</a>
                 <!-- <a href="#">Eletronicos</a> -->
                 <a href="fale-conosco.html">Fale Conosco</a>
             </nav>
@@ -54,8 +54,8 @@
                 </div>
 
                 <div class="servico">
-                    <h3>🌐 Desenvolvimento Web e Sistemas</h3>
-                    <p>Sites, blogs, cadastros e aplicações com tecnologias modernas como Python, Django, HTML, CSS, JS e PostgreSQL.
+                    <h3>💻 Suporte de TI</h3>
+                    <p>Oferecemos suporte técnico completo para garantir que seus sistemas funcionem com eficiência, segurança e estabilidade. Desde manutenção preventiva até a resolução de problemas, estamos prontos para manter sua tecnologia sempre disponível.
                         <a href="#">Saiba Mais</a>
                     </p>
                 </div>
@@ -76,5 +76,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2025 CGTECH Consultoria. Todos os direitos reservados.</p>
+    </footer>
     </body>
     </html>
