--- a/Sobre.html
+++ b/Sobre.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="Sobre.html">Sobre</a>
                 <a href="Services.html">Serviços</a>
-                <a href="#">Portfólio</a>
+                <a href="Portifolio.html">Portfólio</a>
                 <!-- <a href="#">Eletronicos</a> -->
                 <a href="fale-conosco.html">Fale Conosco</a>
             </nav>
@@ -74,11 +74,7 @@
     </div> -->
     
     <footer>
-        <div id="footer">
-           <strong>
-            Todos os Direitos Reservados © CG TECH CONSULTORIA
-           </strong> 
-        </div>
-    </footer>    
+        <p>&copy; 2025 CGTECH Consultoria. Todos os direitos reservados.</p>
+    </footer>  
 </body>
 </html>
