--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -20,7 +20,7 @@
             <a href="index.html">Home</a>
             <a href="Sobre.html">Sobre</a>
             <a href="Services.html">Serviços</a>
-            <a href="#">Portfólio</a>
+            <a href="Portifolio.html">Portfólio</a>
             <a href="fale-conosco.html">Fale Conosco</a>
         </nav>
     </header>
@@ -55,9 +55,7 @@
     </div>
 
     <footer>
-        <div id="footer">
-            <strong>Todos os Direitos Reservados © CG TECH CONSULTORIA</strong>
-        </div>
+        <p>&copy; 2025 CGTECH Consultoria. Todos os direitos reservados.</p>
     </footer>
     <script src="js/fale-conosco.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>    
